This is for web designing practice.

--- a/Photo_Grid/index.html
+++ b/Photo_Grid/index.html
@@ -2,47 +2,11 @@
 <html>
 <head>
 	<title>PhotoGrid</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-	<style>
-		html{
-			height:100%;
-		}
-		body{
-			
-			background:url(https://images.unsplash.com/photo-1549379702-9692e37d2e58?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1045&q=80);
-			background-size: cover;
-			background-position: center;
-			font-family: Lato;
-			color:white;
-		}
-		#content{
-			text-align: left;
-			padding-top: 25%;
-			text-shadow: 0px 4px 3px rgba(0,0,0,0.6), 0px 8px 13px rgba(0,0,0,0.4), 0px 18px 23px rgba(0,0,0,0.2);
-		}
-		.btn-secondary{
-			background: #ffffff;
-			color:#333;
-			text-decoration: none;
-		}
-		h1{
-			font-weight: 700;
-			font-size: 5em;
-		}
-		hr{
-			width:500px;
-			border-top: 1px solid #f8f8f8;
-			border-bottom: 1px solid rgba(0,0,0,0.3);
-		}
-		.navbar{
-		background-color: #2c3e50;
-	}
-.navbar-dark .navbar-nav .nav-link{
-		color:white;
-	} 
-	</style>
+	<link rel="stylesheet" type="text/css" href="css\styles.css">
 </head>
 <body id="landing">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
